--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     </header>
     <main>
         <section class="banner">
+            <div class="circle2"></div>
+            <div class="circle1"></div>
+            <div class="circle3"></div>
             <img src="images/main_grid.png" class="main_grid" alt="">
             <p><b>ARZ Web Concept </b> :</p>
             <p class="main_text_top"><b>Votre</b> Vision, <b>Notre</b> Création</p>
-            <div class="circle"></div>
             <script>
             window.onscroll = function() {myFunction()};
 
