fixing blur on ios

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <img src="images/main_grid.png" class="main_grid" alt="">
             <p><b>ARZ Web Concept </b> :</p>
             <p class="main_text_top"><b>Votre</b> Vision, <b>Notre</b> Création</p>
+            <button>Nous contacter</button>
             <script>
             window.onscroll = function() {myFunction()};
 
