--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <ul class="sidebar">
             <li><a href="index.html">Acceuil</a></li>
             <li><a href="about.html">À Propos</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
         <ul>
             <li><a href="index.html">Acceuil</a></li>
