--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
         <ul>
             <li><a href="index.html">Acceuil</a></li>
             <li><a href="about.html">À Propos</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
-        
         <button onclick="opensidebar()" class="material-symbols-outlined">
             menu
         </button>
@@ -37,7 +36,12 @@
             <img src="images/main_grid.png" class="main_grid" alt="">
             <p><b>ARZ Web Concept </b> :</p>
             <p class="main_text_top"><b>Votre</b> Vision, <b>Notre</b> Création</p>
-            <button>Nous contacter</button>
+            <div class="btn_cont">
+                <button>Nous contacter</button>
+                <p><b>Besoin d'aide ou d'informations supplémentaires ?</b>
+                Nous sommes là pour vous aider. Cliquez sur le bouton ci-dessus et notre équipe se fera un plaisir de répondre à toutes vos questions.
+            </p>
+            </div>
             <script>
             window.onscroll = function() {myFunction()};
 
