--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header>
         <a href="index.html"><img src="images/LOGOARZ.png" class="logo_arz" alt="logo"></a>
         <ul class="sidebar">
-            <li><a href="index.html">Acceuil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html">À Propos</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <ul>
-            <li><a href="index.html">Acceuil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html">À Propos</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -37,7 +37,7 @@
             <p><b>ARZ Web Concept </b> :</p>
             <p class="main_text_top"><b>Votre</b> Vision, <b>Notre</b> Création</p>
             <div class="btn_cont">
-                <button>Nous contacter</button>
+                <button onclick="window.location.href='https://www.arzwebconcept.com/contact.html';">Nous contacter</button>
                 <p><b>Besoin d'aide ou d'informations supplémentaires ?</b>
                 Nous sommes là pour vous aider. Cliquez sur le bouton ci-dessus et notre équipe se fera un plaisir de répondre à toutes vos questions.
             </p>
@@ -88,7 +88,7 @@
         <p class="bottom_contact">
             Contactez-nous en utilisant le formulaire de contact ci-dessous. Nous sommes impatients de vous entendre et de vous aider dans vos besoins en développement web.
         </p>
-        <button>Contact</button>
+        <button onclick="window.location.href='https://www.arzwebconcept.com/contact.html';">Contact</button>
         <p class="cc">© 2021 ARZ Web Concept. Tous droits réservés.</p>
     </footer>
 </body>
