--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X</title>
+    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <title>ARZ Web Concept</title>
 </head>
 <body>
-    We are constructing this page. Please come back later.
+    <header>
+        <a href="index.html"><img src="images/LOGOARZ.png" class="logo_arz" alt="logo"></a>
+        <ul class="sidebar">
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="about.html">À Propos</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="about.html">À Propos</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <button onclick="opensidebar()" class="material-symbols-outlined">
+            menu
+        </button>
+    </header>
+    <main>
+        <section class="banner">
+            <p><b>Contactez-nous !</b><br>
+                Vous avez une question, un projet ou besoin d'assistance ? Nous sommes là pour vous aider ! Remplissez simplement le formulaire ci-dessous, et nous vous répondrons dans les plus brefs délais.
+            </p>
+            <script>
+            window.onscroll = function() {myFunction()};
+
+            var header = document.querySelector("header");
+            var sticky = header.offsetTop;
+
+            function myFunction() {
+                if (window.pageYOffset > sticky) {
+                    header.classList.add("sticky");
+                } else {
+                    header.classList.remove("sticky");
+                }
+            }
+
+            function opensidebar() {
+                const sidebar = document.querySelector(".sidebar")
+                if (sidebar.style.top === "0px") {
+                    sidebar.style.top = "-200px";
+                } else {
+                sidebar.style.top = "0px";
+                }
+            }
+            </script>
+        </section>
+        <section class="contact_form">
+            <input type="text" name="name" id="name" placeholder="Nom et Prenom">
+            <input type="email" name="email" id="email" placeholder="Email">
+            <input type="text" name="subject" id="subject" placeholder="Sujet de votre message">
+            <textarea name="message" id="message" cols="30" rows="10" placeholder="Entrez votre message"></textarea>
+            <button onclick="sendEmail();">Envoyer</button>
+        </section>
+    </main>
+    <footer>
+        <img src="images/LOGOARZ.png" class ="logo_arz" alt="logo">
+        <p class="bottom_contact">
+            Contactez-nous en utilisant le formulaire de contact ci-dessous. Nous sommes impatients de vous entendre et de vous aider dans vos besoins en développement web.
+        </p>
+        <button>Contact</button>
+        <p class="cc">© 2021 ARZ Web Concept. Tous droits réservés.</p>
+    </footer>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script>
+        function sendEmail() {
+            Email.send({
+                Host: "smtp.gmail.com",
+                Username: "lolman004400@gmail.com",
+                Password: "Ebasr5867",
+                To: 'arzwebconcept@gmail.com',
+                From: document.getElementById("email").value,
+                Subject: document.getElementById("subject").value,
+                Body: document.getElementById("message").value
+            }).then(
+                message => alert("mail sent successfully")
+            );
+        }
+    </script>
 </body>
 </html>
