--- a/contact.html
+++ b/contact.html
@@ -47,10 +47,10 @@
 
             function opensidebar() {
                 const sidebar = document.querySelector(".sidebar")
-                if (sidebar.style.top === "0px") {
+                if (sidebar.style.top === "20px") {
                     sidebar.style.top = "-200px";
                 } else {
-                sidebar.style.top = "0px";
+                sidebar.style.top = "20px";
                 }
             }
             </script>
@@ -68,7 +68,7 @@
         <p class="bottom_contact">
             Contactez-nous en utilisant le formulaire de contact ci-dessous. Nous sommes impatients de vous entendre et de vous aider dans vos besoins en développement web.
         </p>
-        <button>Contact</button>
+        <button onclick="window.location.href='https://www.arzwebconcept.com/contact.html';">Contact</button>
         <p class="cc">© 2021 ARZ Web Concept. Tous droits réservés.</p>
     </footer>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
