--- a/about.html
+++ b/about.html
@@ -33,22 +33,9 @@
     </header>
     <main>
         <section class="banner">
-            <div class="about1">
-                <h1>À Propos</h1>
-                <p>ARZ Web Concept est une agence de création de sites web spécialisée dans la conception et le développement de solutions web sur mesure. Notre mission est de transformer vos idées en sites web innovants et performants qui reflètent parfaitement votre vision et vos objectifs.</p>
-            </div>
-            <div class="circle1"></div>
-            <div class="about2">
-                <h1>Mission et Valeurs</h1>
-                <p>Chez ARZ Web Concept, nous croyons que chaque projet web est unique et mérite une approche personnalisée. Nos valeurs fondamentales sont l'innovation, la qualité et la satisfaction client. Nous nous engageons à fournir des solutions web de haute qualité qui répondent aux besoins spécifiques de nos clients tout en respectant les délais et les budgets.</p>
-            </div>
-            <div class="circle2"></div>
-            <img src="images/pc_server.png" alt="">
-            <div class="about3">
-                <h1>Équipe</h1>
-                <p>Notre équipe est composée de professionnels passionnés et expérimentés, chacun expert dans son domaine. Ensemble, nous combinons créativité, expertise technique et sens du détail pour offrir des sites web qui non seulement sont esthétiques mais aussi fonctionnels et optimisés pour la performance.</p>
-            </div>
-            <div class="circle3"></div>
+            <p><b>À Propos</b><br>
+                ARZ Web Concept est une agence de développement web basée à Paris. Nous sommes spécialisés dans la création de sites web modernes et professionnels pour les petites et moyennes entreprises. Notre équipe de développeurs web expérimentés est prête à vous aider à réaliser vos projets de développement web.
+            </p>
         </section>
     </main>
     <footer>
