--- a/contact.html
+++ b/contact.html
@@ -76,9 +76,9 @@
         function sendEmail() {
             Email.send({
                 Host: "smtp.gmail.com",
-                Username: "lolman004400@gmail.com",
-                Password: "Ebasr5867",
-                To: 'arzwebconcept@gmail.com',
+                Username: "@gmail.com",
+                Password: "",
+                To: '@gmail.com',
                 From: document.getElementById("email").value,
                 Subject: document.getElementById("subject").value,
                 Body: document.getElementById("message").value
