added services scroll

--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
         <ul>
             <li><a href="index.html">Acceuil</a></li>
             <li><a href="about.html">À Propos</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="https://www.arzwebconcept.com/index.html#competences">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
         <script>
             window.onscroll = function() {myFunction()};
@@ -43,7 +43,7 @@
         <p class="bottom_contact">
             Contactez-nous en utilisant le formulaire de contact ci-dessous. Nous sommes impatients de vous entendre et de vous aider dans vos besoins en développement web.
         </p>
-        <button>Contact</button>
+        <button onclick="window.location.href='https://www.arzwebconcept.com/contact.html'";>Contact</button>
         <p class="cc">© 2021 ARZ Web Concept. Tous droits réservés.</p>
     </footer>
 </body>
