--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <ul class="sidebar">
             <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html">À Propos</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="#competences">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <ul>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html">À Propos</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="#competences">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <button onclick="opensidebar()" class="material-symbols-outlined">
@@ -67,7 +67,7 @@
 
             </script>
         </section>
-        <section class="competences">
+        <section id="competences" class="competences">
             <h1>Compétences</h1>
             <div class="competence">
                 <h1>Conception de sites web personnalisés</h1>
