redirect link fixed

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <main>
         <section class="banner">
             <p><b>À Propos</b><br>
-                ARZ Web Concept est une agence de développement web basée à Paris. Nous sommes spécialisés dans la création de sites web modernes et professionnels pour les petites et moyennes entreprises. Notre équipe de développeurs web expérimentés est prête à vous aider à réaliser vos projets de développement web.
+                ARZ Web Concept est une agence de développement web basée à Strasbourg. Nous sommes spécialisés dans la création de sites web modernes et professionnels pour les petites et moyennes entreprises. Notre équipe de développeurs web expérimentés est prête à vous aider à réaliser vos projets de développement web.
             </p>
         </section>
     </main>
