--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,13 @@
         <ul class="sidebar">
             <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html">À Propos</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="https://www.arzwebconcept.com/index.html#competences">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <ul>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html">À Propos</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="https://www.arzwebconcept.com/index.html#competences">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <button onclick="opensidebar()" class="material-symbols-outlined">
