--- a/about.html
+++ b/about.html
@@ -3,19 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ARZ Web Concept</title>
     <link rel="stylesheet" href="style1.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <header>
         <a href="index.html"><img src="images/LOGOARZ.png" class="logo_arz" alt="logo"></a>
-        <ul>
-            <li><a href="index.html">Acceuil</a></li>
+        <ul class="sidebar">
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html">À Propos</a></li>
-            <li><a href="https://www.arzwebconcept.com/index.html#competences">Services</a></li>
+            <li><a href="#competences">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="about.html">À Propos</a></li>
+            <li><a href="#competences">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <button onclick="opensidebar()" class="material-symbols-outlined">
+            menu
+        </button>
         <script>
             window.onscroll = function() {myFunction()};
 
@@ -29,14 +38,28 @@
                     header.classList.remove("sticky");
                 }
             }
+
+            function opensidebar() {
+                const sidebar = document.querySelector(".sidebar")
+                if (sidebar.style.top === "20px") {
+                    sidebar.style.top = "-200px";
+                } else {
+                sidebar.style.top = "20px";
+                }
+            }
         </script>
     </header>
     <main>
         <section class="banner">
             <p><b>À Propos</b><br>
-                ARZ Web Concept est une agence de développement web basée à Strasbourg. Nous sommes spécialisés dans la création de sites web modernes et professionnels pour les petites et moyennes entreprises. Notre équipe de développeurs web expérimentés est prête à vous aider à réaliser vos projets de développement web.
+                <b>ARZ Web Concept</b> est une agence de développement web basée à <b>Strasbourg</b>. Nous sommes spécialisés dans la création de sites web modernes et professionnels pour les petites et moyennes entreprises. Notre équipe de développeurs web expérimentés est prête à vous aider à réaliser vos projets de <b>développement web</b>.
+                Notre mission est de créer des expériences digitales uniques qui vous aident à atteindre vos objectifs en ligne.
             </p>
         </section>
+        <div class="signature">
+            Votre équipe ARZ Web Concept
+            <img src="images/LOGOARZ.png" alt="">
+        </div>
     </main>
     <footer>
         <img src="images/LOGOARZ.png" class ="logo_arz" alt="logo">
